--- a/scb-frontend/src/components/Logo-Section/LogoSection.css
+++ b/scb-frontend/src/components/Logo-Section/LogoSection.css
@@ -14,12 +14,14 @@
     position: relative;
     left: 14rem;
     color: #149BFC;
+    font-weight: 700;
 }
 .Heading{
     margin-top: 5rem;
     position: relative;
     left: 5rem;
     color: #149BFC;
+    font-weight: 700;
 }
 
 
@@ -36,40 +38,45 @@
     top: 0rem;
     left: -2rem;
     width: 100%;
+    font-weight: bold;
    }
 .container{
     display: block;
     position: relative;
-    left: 1.5rem;
+    left: 0.5rem;
     
 }
 .logoSCB{
-    height: 17rem;
-    width: 20rem;
+    height: 21rem;
+    width: 24rem;
     margin-left: 0.5rem;
     left: 0rem;
     position: relative;
+
 }
 
 .Heading{
     margin-top: 5rem;
     position: relative;
-    left: 7rem;
+    left: 6rem;
+    font-weight: bold;
     color: #149BFC;
-    width: 15rem;
+    width: 20rem;
+    font-size: 2.5rem;
 }
 
 .DownHeading{
-    font-size: 1rem;
     position: relative;
-    left: 7rem;
+    left: 6rem;
     top: 1rem;
-    width: 60%;
+    width: 80%;
+    font-weight: 700;
+    font-size: 1.5rem;
 }
 
 .logoIAOMR {
-    height: 19rem;
-    width: 22rem;
+    height: 22rem;
+    width: 25rem;
     margin-left: 0rem;
     position: relative;
     right: 15rem;
